Enhance README.md with comprehensive sections including introduction, use cases, features, architecture, modules, technology stack, and detailed getting started guide. Update Gradle plugin versions and add BLE Attach library dependency for service module.